# agnosis-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  gunicorn.config.py  pyproject.toml
app/: __init__.py  db.py  fake_data.py  model.py  routes.py  seed.py  types.py
app/models/: idea.py  source.py  user.py
app/routes/: auth.py  decorators.py  ideas.py  users.py
tests/: fixtures.py  models_test.py  routes_test.py
