[tool.poetry]
name = "agnosis-backend"
version = "0.1.0"
description = "JSON API server for Agnosis app"
authors = ["Gerard Keiser <gerardkeiser@gmail.com>"]
license = "GNU Affero"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
neo4j = "^5.0.1"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.0"
bcrypt = "^4.0.1"
Flask-JWT-Extended = "^4.4.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
